Ch 17 - OOP - refeed

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_17_oop.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_17_oop.ipynb
@@ -1029,29 +1029,41 @@
     "on its state. We’re going to work through an example of a blog post struct that  \n",
     "has a field to hold its state, which will be a state object from the set : \n",
     "\n",
-    "- \"draft\",  \n",
-    "- \"review\", or  \n",
-    "- \"published\".\n",
+    "- `draft`,  \n",
+    "- `review`, or  \n",
+    "- `published`.\n",
     "\n",
-    "The state objects share functionality: in Rust, of course, we use structs and  \n",
-    "traits rather than objects and inheritance. Each state object is responsible  \n",
-    "for its own behavior and for governing when it should change into another state.  \n",
-    "The value that holds a state object knows nothing about the different behavior  \n",
-    "of the states or when to transition between states.\n",
+    "#### -- Structs and Traits vs Objects and Inheritance --\n",
+    "\n",
+    "The state objects share functionality: in Rust, of course :  \n",
+    "\n",
+    "- we use `structs` and `traits`  \n",
+    "- rather than objects and inheritance.  \n",
+    "\n",
+    "Each `state object` is responsible for its own behavior and for governing  \n",
+    "when it should change into another state.  \n",
+    "\n",
+    "The `value` that holds a `state object` knows nothing about the different  \n",
+    "behavior of the states or when to transition between states.\n",
     "\n",
     "The advantage of using the state pattern is that, when the business requirements  \n",
-    "of the program change, we won’t need to change the code of the value holding the  \n",
-    "state or the code that uses the value. We’ll only need to update the code inside  \n",
-    "one of the state objects to change its rules or perhaps add more state objects."
+    "of the program change :  \n",
+    "\n",
+    "- we won’t need to change the code of the value holding the state  \n",
+    "- or the code that uses the value.  \n",
+    "- We’ll only need to update the code inside one of the state objects to change  \n",
+    "its rules or perhaps add more state objects."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- 1st pass : Emulate Conventional OOP --\n",
+    "\n",
     "First, we’re going to implement the state pattern in a more traditional  \n",
     "object-oriented way, then we’ll use an approach that’s a bit more natural in  \n",
-    "Rust. Let’s dig in to incrementally implementing a blog post workflow using the \n",
+    "Rust. Let’s dig in to incrementally implementing a blog post workflow using the  \n",
     "state pattern.\n",
     "\n",
     "The final functionality will look like this:\n",
@@ -1083,18 +1095,22 @@
    },
    "outputs": [],
    "source": [
+    "/// Psuedo code for blog post : DOES NOT COMPILE\n",
     "// use blog::Post\n",
     "\n",
     "{\n",
     "    let mut post = blog::Post::new();\n",
     "\n",
     "    post.add_text(\"I battled a bee this week\");\n",
+    "    // new Post is a Draft and should be an empty string\n",
     "    assert_eq!(\"\", post.content());\n",
     "    \n",
     "    post.request_review();\n",
+    "    // Draft => PendingReview, post should still be empty\n",
     "    assert_eq!(\"\", post.content());\n",
     "\n",
     "    post.approve();\n",
+    "    // PendingReview => Published, post content now available to read\n",
     "    assert_eq!(\"I battled a bee this week\", post.content());\n",
     "}"
    ]
@@ -1106,27 +1122,42 @@
     "> Listing 17-11: Code that demonstrates the desired behavior we want our blog  \n",
     "crate to have\n",
     "\n",
-    "We want to allow the user to create a new draft blog post with Post::new. We  \n",
-    "want to allow text to be added to the blog post. If we try to get the post’s  \n",
+    "#### -- Assert Business Logic for Post Objects --\n",
+    "\n",
+    "- We want to allow the user to create a new draft blog post with Post::new.  \n",
+    "- We want to allow text to be added to the blog post. If we try to get the post’s  \n",
     "content immediately, before approval, we shouldn’t get any text because the  \n",
-    "post is still a draft. We’ve added assert_eq! in the code for demonstration  \n",
-    "purposes. An excellent unit test for this would be to assert that a draft blog  \n",
-    "post returns an empty string from the content method, but we’re not going to  \n",
-    "write tests for this example.\n",
+    "post is still a draft. \n",
     "\n",
-    "Next, we want to enable a request for a review of the post, and we want content  \n",
-    "to return an empty string while waiting for the review. When the post receives  \n",
-    "approval, it should get published, meaning the text of the post will be  \n",
-    "returned when content is called.\n",
+    "We’ve added assert_eq! in the code for demonstration purposes. An excellent  \n",
+    "unit test for this would be to assert that:   \n",
     "\n",
-    "Notice that the only type we’re interacting with from the crate is the Post  \n",
+    "- a draft blog post returns an empty string from the content method, but we’re  \n",
+    "not going to write tests for this example.\n",
+    "\n",
+    "Next, we want to :  \n",
+    "\n",
+    "- enable a request for a review of the post, and we want content to return an  \n",
+    "empty string while waiting for the review.  \n",
+    "- When the post receives approval, it should get published, meaning the text of  \n",
+    "the post will be returned when content is called.\n",
+    "\n",
+    "#### -- Post Struct Encapsulates State Traits  --\n",
+    "\n",
+    "Notice that the only type we’re interacting with from the crate is the `Post`  \n",
     "type. This type will use the state pattern and will hold a value that will be  \n",
     "one of three state objects representing the various states a post can be  \n",
-    "in—draft, waiting for review, or published. Changing from one state to another  \n",
-    "will be managed internally within the Post type. The states change in response  \n",
-    "to the methods called by our library’s users on the Post instance, but they  \n",
-    "don’t have to manage the state changes directly. Also, users can’t make a  \n",
-    "mistake with the states, like publishing a post before it’s reviewed."
+    "in : \n",
+    "\n",
+    "- draft, \n",
+    "- waiting for review, or  \n",
+    "- published.  \n",
+    "\n",
+    "Changing from one state to another will be managed internally within the `Post`  \n",
+    "type. The states change in response to the methods called by our library’s  \n",
+    "users on the `Post` instance, but they don’t have to manage the state changes  \n",
+    "directly. Also, users can’t make a mistake with the states, like publishing a  \n",
+    "post before it’s reviewed."
    ]
   },
   {
@@ -1136,21 +1167,21 @@
     "### Defining `Post` and Creating a New Instance in the Draft State\n",
     "\n",
     "Let’s get started on the implementation of the library! We know we need a  \n",
-    "public Post struct that holds some content, so we’ll start with the definition  \n",
-    "of the struct and an associated public new function to create an instance of  \n",
-    "Post, as shown in Listing 17-12. We’ll also make a private State trait that  \n",
-    "will define the behavior that all state objects for a Post must have.\n",
+    "public `Post struct` that holds some `content`, so we’ll start with the  \n",
+    "definition of the `struct` and an associated public `new` function to create an  \n",
+    "instance of `Post`, as shown in Listing 17-12. We’ll also make a private `State`  \n",
+    "trait that will define the behavior that all state objects for a Post must have.\n",
     "\n",
-    "Then Post will hold a trait object of Box<dyn State> inside an Option<T> in a  \n",
-    "private field named state to hold the state object. You’ll see why the  \n",
-    "Option<T> is necessary in a bit.\n",
+    "Then `Post` will hold a `trait` object of `Box<dyn State>` inside an `Option<T>`  \n",
+    "in a private field named `state` to hold the state object. You’ll see why the  \n",
+    "`Option<T>` is necessary in a bit.\n",
     "\n",
     "> Filename: src/lib.rs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -1158,6 +1189,8 @@
    },
    "outputs": [],
    "source": [
+    "// - Post struct encapsulates a state pattern\n",
+    "// - and contains content string\n",
     "pub struct Post {\n",
     "    state : Option<Box<dyn State>>,\n",
     "    content : String,\n",
@@ -1176,10 +1209,16 @@
     "\n",
     "} // if not enclosed, in later cells : [E0592] Error: duplicate definitions\n",
     "\n",
+    "// Defines behaviour shared by different post states\n",
     "trait State {}\n",
     "\n",
+    "// Draft is our starting default state\n",
     "struct Draft {}\n",
+    "// struct PendingReview {}\n",
+    "// struct Published {}\n",
     "\n",
+    "// Just implementing the trait for Draft for now\n",
+    "// - since that's the minimal we need to generate a Post instance\n",
     "impl State for Draft {}"
    ]
   },
@@ -1190,20 +1229,27 @@
     "> Listing 17-12: Definition of a Post struct and a new function that creates a  \n",
     "new Post instance, a State trait, and a Draft struct\n",
     "\n",
-    "The State trait defines the behavior shared by different post states. The state  \n",
-    "objects are Draft, PendingReview, and Published, and they will all implement  \n",
-    "the State trait. For now, the trait doesn’t have any methods, and we’ll start  \n",
-    "by defining just the Draft state because that is the state we want a post to  \n",
-    "start in.\n",
+    "The `State` trait defines the behavior shared by different post states. The  \n",
+    "state objects are :  \n",
     "\n",
-    "When we create a new Post, we set its state field to a Some value that holds a  \n",
-    "Box. This Box points to a new instance of the Draft struct. This ensures  \n",
-    "whenever we create a new instance of Post, it will start out as a draft.  \n",
+    "- Draft,  \n",
+    "- PendingReview, and \n",
+    "- Published,  \n",
     "\n",
-    "- Because the state field of Post is private, there is no way to create a Post  \n",
-    "in any other state!  \n",
+    "#### -- Post is Instantiated as a Draft State --\n",
     "\n",
-    "In the Post::new function, we set the content field to a new, empty String."
+    "They will all implement the `State` trait. For now, the trait doesn’t have any  \n",
+    "methods, and we’ll start by defining just the `Draft` state because that is the  \n",
+    "state we want a post to start in.\n",
+    "\n",
+    "When we create a new `Post`, we set its state field to a `Some` value that holds  \n",
+    "a `Box`. This `Box` points to a new instance of the `Draft` struct. This ensures  \n",
+    "whenever we create a new instance of `Post`, it will start out as a `draft`.  \n",
+    "\n",
+    "- Because the `state` field of `Post` is private, there is no way to create a  \n",
+    "`Post` in any other state!  \n",
+    "\n",
+    "In the `Post::new` function, we set the `content` field to a new, `empty String`."
    ]
   },
   {
@@ -1212,12 +1258,20 @@
    "source": [
     "### Storing the Text of the Post Content\n",
     "\n",
-    "We saw in Listing 17-11 that we want to be able to call a method named add_text  \n",
-    "and pass it a &str that is then added as the text content of the blog post. We  \n",
-    "implement this as a method, rather than exposing the content field as pub, so  \n",
-    "that later we can implement a method that will control how the content field’s  \n",
-    "data is read. The add_text method is pretty straightforward, so let’s add the  \n",
-    "implementation in Listing 17-13 to the impl Post block:\n",
+    "We saw in Listing 17-11 that we want to be able to :  \n",
+    "\n",
+    "- call a method named `add_text`  \n",
+    "- and pass it a `&str` that is then  \n",
+    "- added as the text `content` of the blog post.  \n",
+    "\n",
+    "We implement this as a `method`, rather than exposing the `content` field as  \n",
+    "`pub`, so that later we can :  \n",
+    "\n",
+    "- `implement a method` that will control how the `content` field’s data  \n",
+    "is read.  \n",
+    "\n",
+    "The `add_text` method is pretty straightforward, so let’s add the  \n",
+    "implementation in Listing 17-13 to the `impl Post` block:\n",
     "\n",
     "> Filename: src/lib.rs"
    ]
@@ -1252,12 +1306,17 @@
     "> Listing 17-13: Implementing the add_text method to add text to a post’s  \n",
     "content\n",
     "\n",
-    "The add_text method takes a mutable reference to self, because we’re changing  \n",
-    "the Post instance that we’re calling add_text on. We then call push_str on the  \n",
-    "String in content and pass the text argument to add to the saved content. This  \n",
-    "behavior doesn’t depend on the state the post is in, so it’s not part of the  \n",
-    "state pattern. The add_text method doesn’t interact with the state field at all,  \n",
-    "but it is part of the behavior we want to support."
+    "#### -- `add_text` does NOT effect STATE, so impl POST --\n",
+    "\n",
+    "The `add_text` method takes a mutable reference to `self`, because :  \n",
+    "\n",
+    "- we’re changing the `Post` instance that we’re calling `add_text` on.  \n",
+    "- We then call `push_str` on the `String` in `content` and pass the text  \n",
+    "argument to add to the saved `content`.  \n",
+    "\n",
+    "This behavior doesn’t depend on the `state` the post is in, so it’s not part  \n",
+    "of the state pattern. The `add_text` method doesn’t interact with the `state`  \n",
+    "field at all, but it is part of the behavior we want to support."
    ]
   },
   {
@@ -1832,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -1877,11 +1936,20 @@
     "    \n",
     "}\n",
     "\n",
+    "\n",
     "trait State {\n",
     "    fn request_review(self: Box<Self>) -> Box<dyn State>;\n",
     "    fn approve(self: Box<Self>) -> Box<dyn State>;\n",
     "    fn content<'a>(&self, post: &'a Post) -> &'a str {\n",
     "        \"\"\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "use std::fmt;\n",
+    "\n",
+    "impl fmt::Debug for dyn State {\n",
+    "    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {\n",
+    "        write!(f, \"State {{ }}\")\n",
     "    }\n",
     "}\n",
     "\n",
@@ -1926,7 +1994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -1934,23 +2002,13 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "thread '<unnamed>' panicked at 'assertion failed: `(left == right)`\n",
-      "  left: `\"\"`,\n",
-      " right: `\"I ate a salad for lunch today\"`', src/lib.rs:107:5\n",
-      "stack backtrace:\n",
-      "   0: _rust_begin_unwind\n",
-      "   1: core::panicking::panic_fmt\n",
-      "   2: core::panicking::assert_failed_inner\n",
-      "   3: <unknown>\n",
-      "   4: <unknown>\n",
-      "   5: <unknown>\n",
-      "   6: evcxr::runtime::Runtime::run_loop\n",
-      "   7: evcxr::runtime::runtime_hook\n",
-      "   8: evcxr_jupyter::main\n",
-      "note: Some details are omitted, run with `RUST_BACKTRACE=full` for a verbose backtrace.\n"
+     "ename": "Error",
+     "evalue": "no method named `downcast_ref` found for reference `&Box<dyn State>` in the current scope",
+     "output_type": "error",
+     "traceback": [
+      "    if let Some(state) = post.state.as_ref().map(|s| s.downcast_ref::<Draft>()).flatten() {",
+      "                                                       ^^^^^^^^^^^^ method not found in `&Box<dyn State>`",
+      "no method named `downcast_ref` found for reference `&Box<dyn State>` in the current scope"
      ]
     }
    ],
@@ -1958,8 +2016,18 @@
     "{\n",
     "   \n",
     "    let mut post = Post::new();\n",
+    "    if let Some(state) = post.state.as_ref().map(|s| s.downcast_ref::<Draft>()).flatten() {\n",
+    "        // src/lib.rs:114] state = State { }\n",
+    "        // @audit : why is it not Draft?\n",
+    "        dbg!(state);\n",
+    "        state.content(&post);\n",
+    "    }\n",
     "\n",
     "    post.add_text(\"I ate a salad for lunch today\");\n",
+    "    println!(\"Post: content {}  state {:?}\", post.content(), post.state);\n",
+    "    // Only published blog posts return content to print, so unapproved posts can’t  \n",
+    "    // accidentally be published...\n",
+    "    // - but the draft post has content ... when it should be empty\n",
     "    assert_eq!(\"\", post.content());\n",
     "\n",
     "}"
