--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_15_smart_pointers.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_15_smart_pointers.ipynb
@@ -68,7 +68,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -192,7 +196,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -341,7 +349,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -424,7 +436,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -617,7 +633,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -820,7 +840,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -918,7 +942,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1040,7 +1068,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "#[derive(Debug)]\n",
@@ -1077,7 +1109,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -1155,7 +1191,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1326,7 +1366,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "fn hello(name: &str) {\n",
@@ -1353,7 +1397,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1415,7 +1463,11 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1589,7 +1641,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1727,7 +1783,11 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -1828,7 +1888,11 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2008,7 +2072,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -2163,7 +2231,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2243,7 +2315,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2336,7 +2412,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2637,7 +2717,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -2768,7 +2852,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "pub const QUOTA_OVER_ERROR:&str = \n",
@@ -2885,7 +2973,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -2978,7 +3070,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -3083,7 +3179,11 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "//#[cfg(test)] // commented out to manually run test in Jupyter cell\n",
@@ -3140,7 +3240,11 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "// Run the test manually\n",
@@ -3219,7 +3323,11 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "mod tests {\n",
@@ -3267,7 +3375,11 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -3390,13 +3502,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "init `value` = RefCell { value: 5 }\n",
+      "b_mut `value` = RefCell { value: 15 }\n",
       "a after = Cons(RefCell { value: 15 }, Nil)\n",
       "b after = Cons(RefCell { value: 3 }, Cons(RefCell { value: 15 }, Nil))\n",
       "c after = Cons(RefCell { value: 4 }, Cons(RefCell { value: 15 }, Nil))\n"
@@ -3408,7 +3526,7 @@
        "()"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3434,6 +3552,7 @@
     "\n",
     "    // Create an instance of Rc<RefCell<i32>> and store it in `value`\n",
     "    let value = Rc::new(RefCell::new(5));\n",
+    "    println!(\"init `value` = {:?}\", value);\n",
     "\n",
     "    // Create a List with a Cons variant that holds `value`\n",
     "    // - we need to clone `value` so both `a` and `value` have ownership of the\n",
@@ -3453,6 +3572,7 @@
     "    // - borrow_mut() is part of Rust's system for safely managing mutable\n",
     "    // references\n",
     "    *value.borrow_mut() += 10;\n",
+    "    println!(\"b_mut `value` = {:?}\", value);\n",
     "\n",
     "    // print results\n",
     "    println!(\"a after = {:?}\", a);\n",
@@ -3567,7 +3687,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::cell::RefCell;\n",
@@ -3651,7 +3775,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3891,7 +4019,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::cell::RefCell;\n",
@@ -3931,7 +4063,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -4025,7 +4161,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::cell::RefCell;\n",
@@ -4061,7 +4201,11 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4213,7 +4357,11 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4384,7 +4532,7 @@
    "codemirror_mode": "rust",
    "file_extension": ".rs",
    "mimetype": "text/rust",
-   "name": "rust",
+   "name": "Rust",
    "pygment_lexer": "rust",
    "version": ""
   },
