Ch 17 - OOP - fmt::Display for traits impl

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_17_oop.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_17_oop.ipynb
@@ -1976,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -2021,8 +2021,11 @@
     "    \n",
     "}\n",
     "\n",
+    "use std::fmt;\n",
     "\n",
-    "trait State {\n",
+    "// @note : Ah ... with fmt::Display, we can use println!(\"{}\", post)\n",
+    "// - AND not pollute State with display methods!\n",
+    "trait State: fmt::Display {\n",
     "    fn request_review(self: Box<Self>) -> Box<dyn State>;\n",
     "    fn approve(self: Box<Self>) -> Box<dyn State>;\n",
     "    // default returns empty string slice\n",
@@ -2032,15 +2035,10 @@
     "        \"\"\n",
     "    }\n",
     "\n",
-    "    // @audit : is there a more elegant way to do this?\n",
-    "    fn to_string(&self) -> String;\n",
     "}\n",
     "\n",
-    "#[derive(Debug)]\n",
     "struct Draft {}\n",
-    "#[derive(Debug)]\n",
     "struct PendingReview {}\n",
-    "#[derive(Debug)]\n",
     "struct Published {}\n",
     "\n",
     "impl State for Draft {\n",
@@ -2051,11 +2049,6 @@
     "    fn approve(self: Box<Self>) -> Box<dyn State> {\n",
     "        self\n",
     "    }\n",
-    "\n",
-    "    fn to_string(&self) -> String {\n",
-    "        \"Draft\".to_string()\n",
-    "    }\n",
-    "\n",
     "}\n",
     "\n",
     "impl State for PendingReview {\n",
@@ -2065,10 +2058,6 @@
     "\n",
     "    fn approve(self: Box<Self>) -> Box<dyn State> {\n",
     "        Box::new(Published {})\n",
-    "    }\n",
-    "\n",
-    "    fn to_string(&self) -> String {\n",
-    "        \"PendingReview\".to_string()\n",
     "    }\n",
     "}\n",
     "\n",
@@ -2085,16 +2074,30 @@
     "    fn content<'a>(&self, post: &'a Post) -> &'a str {\n",
     "        &post.content\n",
     "    }\n",
+    "}\n",
     "\n",
-    "    fn to_string(&self) -> String {\n",
-    "        \"Published\".to_string()\n",
+    "impl fmt::Display for Draft {\n",
+    "    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {\n",
+    "        write!(f, \"Draft\")\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "impl fmt::Display for PendingReview {\n",
+    "    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {\n",
+    "        write!(f, \"PendingReview\")\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "impl fmt::Display for Published {\n",
+    "    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {\n",
+    "        write!(f, \"Published\")\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -2116,7 +2119,7 @@
        "()"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2125,9 +2128,7 @@
     "{\n",
     "   \n",
     "    let mut post = Post::new();\n",
-    "    if let Some(state) = post.state.as_ref().map(|s| s.to_string()) {\n",
-    "        println!(\"Post: current state {}\", state);\n",
-    "    }\n",
+    "    println!(\"Post: current state {}\", post.state.as_ref().unwrap().to_string());\n",
     "\n",
     "    post.add_text(\"I ate a salad for lunch today\");\n",
     "    // Only published blog posts return content to print, so unapproved posts can’t  \n",
@@ -2136,19 +2137,15 @@
     "    assert_eq!(\"\", post.content());\n",
     "    \n",
     "    post.request_review();\n",
-    "    if let Some(state) = post.state.as_ref().map(|s| s.to_string()) {\n",
-    "        println!(\"Post: current state {}\", state);\n",
-    "    }\n",
+    "    println!(\"Post: current state {}\", post.state.as_ref().unwrap().to_string());\n",
     "    // - assert that PendingReview content is empty\n",
     "    assert_eq!(\"\", post.content());\n",
     "    \n",
     "    post.approve();\n",
-    "    if let Some(state) = post.state.as_ref().map(|s| s.to_string()) {\n",
-    "        println!(\"Post: current state {}\", state);\n",
-    "    }\n",
-    "\n",
+    "    println!(\"Post: current state {}\", post.state.as_ref().unwrap().to_string());\n",
     "    // - assert that Published content is Post::content()\n",
     "    assert_eq!(\"I ate a salad for lunch today\", post.content());\n",
+    "    \n",
     "}"
    ]
   },
