Ch 17 - OOP - refeed Behaviours as Types

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_17_oop.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_17_oop.ipynb
@@ -1964,10 +1964,16 @@
     "### Encoding States and Behaviours as Types\n",
     "\n",
     "We’ll show you how to rethink the state pattern to get a different set of  \n",
-    "trade-offs. Rather than encapsulating the states and transitions completely so  \n",
-    "outside code has no knowledge of them, we’ll encode the states into different  \n",
-    "types. Consequently, Rust’s type checking system will prevent attempts to use  \n",
-    "draft posts where only published posts are allowed by issuing a compiler error.\n",
+    "trade-offs.  \n",
+    "\n",
+    "- Rather than `encapsulating the states and transitions` completely so  \n",
+    "outside code has no knowledge of them,  \n",
+    "- we’ll `encode the states into different types`\n",
+    "\n",
+    "Consequently, Rust’s type checking system will :  \n",
+    "\n",
+    "- prevent attempts to use `draft` posts  \n",
+    "- where only `published` posts are allowed by issuing a compiler error.\n",
     "\n",
     "Let’s consider the first part of main in Listing 17-11:\n",
     "\n",
@@ -2154,7 +2160,9 @@
    "metadata": {},
    "source": [
     "- We still enable the creation of new posts in the draft state using `Post::new`  \n",
-    "- and the ability to add text to the post’s content. \n",
+    "- and the ability to `add text` to the post’s `content`. \n",
+    "\n",
+    "#### -- Draft::content method Removed : Compiler Error if called --\n",
     "\n",
     "But instead of having :  \n",
     "- a `content` method on a `draft` post that returns an `empty string`,  \n",
@@ -2172,7 +2180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -2185,17 +2193,20 @@
        "()"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pub struct Post {\n",
+    "    // private field to store blog post text\n",
     "    content: String,\n",
+    "    // state field removed : now encoding the state to types of the struct\n",
     "}\n",
     "\n",
     "pub struct DraftPost {\n",
+    "    // private field to store blog post text\n",
     "    content: String,\n",
     "}\n",
     "\n",
@@ -2205,6 +2216,8 @@
     "            content: String::new(),\n",
     "        }\n",
     "    }\n",
+    "    // Because Post now represents a published blog post, it needs to\n",
+    "    // have public content method to display the string to publish\n",
     "    pub fn content(&self) -> &str {\n",
     "        &self.content\n",
     "    }\n",
@@ -2225,25 +2238,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Listing 17-19: A Post with a content method and a DraftPost without a content  \n",
-    "method\n",
+    "> Listing 17-19: A `Post` with a `content method` and a `DraftPost` without a  \n",
+    "`content method`\n",
     "\n",
-    "Both the Post and DraftPost structs have a private content field that stores  \n",
-    "the blog post text. The structs no longer have the state field because we’re  \n",
-    "moving the encoding of the state to the types of the structs. The Post struct  \n",
-    "will represent a published post, and it has a content method that returns the  \n",
-    "content.\n",
+    "- Both the `Post` and `DraftPost` structs have a `private content field`  \n",
+    "that stores the blog post text.  \n",
+    "- The structs no longer have the `state field` because  \n",
+    "- we’re moving the `encoding of the state` to the `types of the structs`.  \n",
     "\n",
-    "We still have a Post::new function, but instead of returning an instance of  \n",
-    "Post, it returns an instance of DraftPost. Because content is private and there  \n",
-    "aren’t any functions that return Post, it’s not possible to create an instance  \n",
-    "of Post right now.\n",
+    "The `Post` struct will represent a `published post`, and it has a  \n",
+    "`content method` that returns the content.\n",
     "\n",
-    "The DraftPost struct has an add_text method, so we can add text to content as  \n",
-    "before, but note that DraftPost does not have a content method defined! So now  \n",
-    "the program ensures all posts start as draft posts, and draft posts don’t have  \n",
-    "their content available for display. Any attempt to get around these  \n",
-    "constraints will result in a compiler error."
+    "We still have a `Post::new` function, but :  \n",
+    "\n",
+    "- instead of returning an instance of `Post`, \n",
+    "- it returns an instance of `DraftPost`.  \n",
+    "\n",
+    "Because `content is private` and there aren’t any functions that return  \n",
+    "`Post`, it’s not possible to create an instance of `Post` right now.\n",
+    "\n",
+    "The `DraftPost` struct has an `add_text method`, so we can add text to  \n",
+    "`content` as before, but note that `DraftPost` does not have a `content method`  \n",
+    "defined! So now the program ensures : \n",
+    "\n",
+    "- all posts start as `draft` posts, and  \n",
+    "- `draft` posts don’t have their `content` available for display.  \n",
+    "\n",
+    "Any attempt to get around these constraints will result in a compiler error."
    ]
   },
   {
@@ -2252,20 +2273,30 @@
    "source": [
     "### Implementing Transitions as Transformations into Different Types\n",
     "\n",
-    "So how do we get a published post? We want to enforce the rule that a draft  \n",
-    "post has to be reviewed and approved before it can be published. A post in the  \n",
-    "pending review state should still not display any content. Let’s implement  \n",
-    "these constraints by adding another struct, PendingReviewPost, defining the  \n",
-    "request_review method on DraftPost to return a PendingReviewPost, and defining  \n",
-    "an approve method on PendingReviewPost to return a Post, as shown in  \n",
-    "Listing 17-20:\n",
+    "So how do we get a published post? We want to enforce the rule that :  \n",
+    "\n",
+    "- a `draft` post has to be \n",
+    "- `reviewed` and \n",
+    "- `approved` \n",
+    "- before it can be `published`  \n",
+    "\n",
+    "A post in the `pending review` state should still not display any content. \n",
+    "Let’s implement these constraints by : \n",
+    "\n",
+    "- adding another struct, `PendingReviewPost`,  \n",
+    "- defining the `request_review` method on `DraftPost`  \n",
+    "- to return a `PendingReviewPost`, and  \n",
+    "- defining an `approve` method on `PendingReviewPost`  \n",
+    "- to return a `Post`,  \n",
+    "\n",
+    "as shown in Listing 17-20:\n",
     "\n",
     "> Filename: src/lib.rs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -2280,6 +2311,8 @@
     "        self.content.push_str(text);\n",
     "    }\n",
     "    // --snip--\n",
+    "    // @audit-ok : takes ownership of self and xforms it into PendingReviewPost\n",
+    "    // - removes lingering DraftPost instance from memory\n",
     "    pub fn request_review(self) -> PendingReviewPost {\n",
     "        PendingReviewPost {\n",
     "            content: self.content,\n",
@@ -2292,6 +2325,8 @@
     "}\n",
     "\n",
     "impl PendingReviewPost {\n",
+    "    // @audit-ok : takes ownership of self and xforms it into Post\n",
+    "    // - removes lingering PendingReviewPost instance from memory\n",
     "    pub fn approve(self) -> Post {\n",
     "        Post {\n",
     "            content: self.content,\n",
@@ -2304,29 +2339,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Listing 17-20: A PendingReviewPost that :  \n",
+    "Listing 17-20: A `PendingReviewPost` that :  \n",
     "\n",
-    "- gets created by calling request_review on DraftPost and  \n",
-    "- an approve method that turns a PendingReviewPost into a published Post\n",
+    "- gets created by calling `request_review` on `DraftPost` and  \n",
+    "- an `approve` method that turns a `PendingReviewPost` into a published `Post`\n",
     "\n",
-    "The request_review and approve methods take ownership of self, thus consuming  \n",
-    "the DraftPost and PendingReviewPost instances and transforming them into a  \n",
-    "PendingReviewPost and a published Post, respectively. This way, we won’t have  \n",
-    "any lingering DraftPost instances after we’ve called request_review on them,  \n",
-    "and so forth. The PendingReviewPost struct doesn’t have a content method  \n",
-    "defined on it, so attempting to read its content results in a compiler error,  \n",
-    "as with DraftPost. Because the only way to get a published Post instance that  \n",
-    "does have a content method defined is to call the approve method on a  \n",
-    "PendingReviewPost, and the only way to get a PendingReviewPost is to call the  \n",
-    "request_review method on a DraftPost, we’ve now encoded the blog post workflow  \n",
-    "into the type system.\n",
+    "#### -- takes ownership of `SELF`.state and returns `NEXT.state` --\n",
     "\n",
-    "But we also have to make some small changes to main. The request_review and  \n",
-    "approve methods return new instances rather than modifying the struct they’re  \n",
-    "called on, so we need to add more let post = shadowing assignments to save the  \n",
-    "returned instances. We also can’t have the assertions about the draft and  \n",
-    "pending review posts’ contents be empty strings, nor do we need them: we can’t  \n",
-    "compile code that tries to use the content of posts in those states any longer.  \n",
+    "The `request_review` and `approve` methods :  \n",
+    "\n",
+    "- take ownership of `self`, thus  \n",
+    "- consuming the `DraftPost` and `PendingReviewPost` instances and  \n",
+    "- transforming them into a `PendingReviewPost` and a published `Post`,  \n",
+    "respectively. \n",
+    "\n",
+    "#### -- on each State as Type, Compiler protects VALID methods --\n",
+    "\n",
+    "This way, we won’t have any lingering `DraftPost` instances after we’ve called  \n",
+    "`request_review` on them, and so forth. The `PendingReviewPost` struct doesn’t  \n",
+    "have a `content` method defined on it, so attempting to read its content  \n",
+    "results in a compiler error, as with `DraftPost`.  \n",
+    "\n",
+    "#### -- Post >|init|> Draft >|req_rev|> PendingReview >|approved|> Post\n",
+    "\n",
+    "Because the only way to get a published `Post` instance that does have a  \n",
+    "`content` method defined is to call the `approve` method on a  \n",
+    "`PendingReviewPost`, and the only way to get a `PendingReviewPost` is to call  \n",
+    "the `request_review` method on a `DraftPost`, we’ve now encoded the blog post  \n",
+    "workflow into the type system.\n",
+    "\n",
+    "#### -- let shadow assignment to capture new `SELF`.state instances\n",
+    "\n",
+    "But we also have to make some small changes to main : \n",
+    "\n",
+    "The `request_review` and `approve` methods :  \n",
+    "- return new instances  \n",
+    "- rather than modifying the struct they’re called on,  \n",
+    "- so we need to add more let post = `shadowing assignments` to save the  \n",
+    "returned instances. \n",
+    "\n",
+    "We also can’t have the assertions about the `draft` and `pending review`  \n",
+    "posts `contents` be empty strings, nor do we need them:  \n",
+    "- we can’t compile code that tries to use the content of posts in those states  \n",
+    "any longer.  \n",
+    "\n",
     "The updated code in main is shown in Listing 17-21:\n",
     "\n",
     "> Filename: src/main.rs"
@@ -2334,7 +2390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -2347,7 +2403,7 @@
        "()"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2356,12 +2412,19 @@
     "// use blog::Post;\n",
     "\n",
     "{\n",
+    "    // new Post starts as Draft \n",
+    "    // - as mutable, we need to change SELF.state to NEXT.state\n",
     "    let mut post = Post::new();\n",
     "\n",
+    "    // add text to private Draft::content\n",
     "    post.add_text(\"I ate a salad for lunch today\");\n",
     "\n",
+    "    // request_review() returns a new PendingReview (w/ content)\n",
+    "    // - shadow assign PendingReview to 'post' var\n",
     "    let post = post.request_review();\n",
     "\n",
+    "    // approve() returns a new Post (w/ content)\n",
+    "    // - shadow assign Post to 'post' var \n",
     "    let post = post.approve();\n",
     "\n",
     "    assert_eq!(\"I ate a salad for lunch today\", post.content());\n",
@@ -2377,24 +2440,37 @@
     "\n",
     "The changes we needed to make to main to reassign post mean that this  \n",
     "implementation doesn’t quite follow the object-oriented state pattern anymore:  \n",
-    "the transformations between the states are no longer encapsulated entirely  \n",
-    "within the Post implementation. However, our gain is that invalid states are  \n",
-    "now impossible because of the type system and the type checking that happens at  \n",
-    "compile time! This ensures that certain bugs, such as display of the content of  \n",
-    "an unpublished post, will be discovered before they make it to production.\n",
+    "\n",
+    "- the `transformations` between the `states` are `no` longer `encapsulated`  \n",
+    "entirely within the `Post` implementation.  \n",
+    "\n",
+    "#### -- Tradeoff : Impossible Invalid State v Encapsulation --\n",
+    "\n",
+    "However, our gain is that **invalid states** are now **impossible** because of  \n",
+    "the type system and the **type checking that happens at compile time!** This  \n",
+    "ensures that certain bugs :  \n",
+    "\n",
+    "- such as display of the `content` of an unpublished post, **will be discovered**  \n",
+    "before they make it to **production**.\n",
     "\n",
     "Try the tasks suggested at the start of this section on the blog crate as it is  \n",
     "after Listing 17-21 to see what you think about the design of this version of  \n",
     "the code. Note that some of the tasks might be completed already in this design.\n",
     "\n",
     "We’ve seen that even though Rust is capable of implementing object-oriented  \n",
-    "design patterns, other patterns, such as encoding state into the type system,  \n",
-    "are also available in Rust. These patterns have different trade-offs. Although  \n",
-    "you might be very familiar with object-oriented patterns, rethinking the  \n",
-    "problem to take advantage of Rust’s features can provide benefits, such as  \n",
-    "preventing some bugs at compile time. Object-oriented patterns won’t always be  \n",
-    "the best solution in Rust due to certain features, like ownership, that  \n",
-    "object-oriented languages don’t have."
+    "design patterns :  \n",
+    "\n",
+    "- other patterns, such as **encoding state into the type system**, are also  \n",
+    "available in Rust. \n",
+    "\n",
+    "These patterns have different trade-offs. Although you might be very familiar  \n",
+    "with object-oriented patterns, rethinking the problem to take advantage of  \n",
+    "Rust’s features can provide benefits, such as :  \n",
+    "\n",
+    "- preventing some bugs at compile time.  \n",
+    "\n",
+    "Object-oriented patterns won’t always be the best solution in Rust due to  \n",
+    "certain features, like ownership, that object-oriented languages don’t have."
    ]
   },
   {
@@ -2406,13 +2482,17 @@
     "\n",
     "No matter whether or not you think Rust is an object-oriented language after  \n",
     "reading this chapter, you now know that you can use trait objects to get some  \n",
-    "object-oriented features in Rust. Dynamic dispatch can give your code some  \n",
-    "flexibility in exchange for a bit of runtime performance. You can use this  \n",
-    "flexibility to implement object-oriented patterns that can help your code’s  \n",
-    "maintainability. Rust also has other features, like ownership, that  \n",
-    "object-oriented languages don’t have. An object-oriented pattern won’t always  \n",
-    "be the best way to take advantage of Rust’s strengths, but is an available  \n",
-    "option.\n",
+    "object-oriented features in Rust. \n",
+    "\n",
+    "- Dynamic dispatch can give your code some flexibility in exchange for a bit of  \n",
+    "runtime performance. You can use this flexibility to implement object-oriented  \n",
+    "patterns that can help your code’s maintainability. \n",
+    "\n",
+    "- Rust also has other features, like ownership, that object-oriented languages  \n",
+    "don’t have.  \n",
+    "\n",
+    "- An object-oriented pattern won’t always be the best way to take advantage of  \n",
+    "Rust’s strengths, but is an available option.\n",
     "\n",
     "Next, we’ll look at patterns, which are another of Rust’s features that enable  \n",
     "lots of flexibility. We’ve looked at them briefly throughout the book but  \n",
